kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_static_env_ext/too_many_args.stderr
error: Expected at most 5 arguments, got 6.
 --> $DIR/too_many_args.rs:5:33
  |
5 | #[require_binary_static_env_ext(E, EC, DC, SC, self, X)]
  |                                 ^^^^^^^^^^^^^^^^^^^^^^
